// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logs matches snapshot 1`] = `
<Fragment>
  <div
    className="container"
  >
    <Header
      onClearClick={[Function]}
      opened={false}
      stickToBottom={false}
      togglePanel={[Function]}
      toggleStickToBottom={[Function]}
    />
    <div
      className="content"
    >
      <Filters
        filters={
          Object {
            "node": "nodeNameMock",
          }
        }
      />
      <LogsList
        nodeId="nodeIdMock"
        onUpdate={[Function]}
        runtimeId="runtimeIdMock"
      />
    </div>
  </div>
  <div
    className="shield"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Logs should be empty when there is no node 1`] = `
<Fragment>
  <div
    className="container hidden"
  >
    <Header
      onClearClick={[Function]}
      opened={false}
      stickToBottom={false}
      togglePanel={[Function]}
      toggleStickToBottom={[Function]}
    />
    <div
      className="content"
    />
  </div>
  <div
    className="shield"
    onClick={[Function]}
  />
</Fragment>
`;
